--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 <!-- written by chapel1337 -->
 
 <head>
+    <meta charset = "UTF-8">
+    <meta name = "viewport" content = "width = device-width">
 
     <link rel = "stylesheet" href = "style.css">
     <script defer src = "script.js"></script>
 
+    <title> clock </title>
 </head>
 
 <body>
